# bug-reproduction-wasmer-wamr

./: Cargo.toml  README.md  flake.nix
src/: main.rs
